Made list of movies. List is saved in localStorage.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <mat-grid-list cols="2" rowHeight="1:2">
   <mat-grid-tile>
-    <app-search></app-search>
+    <app-search class="section"></app-search>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-movie-list></app-movie-list>
+    <app-movie-list class="section"></app-movie-list>
   </mat-grid-tile>
 </mat-grid-list>
