--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  movie-list works!
-</p>
+<mat-grid-list cols="1" rowHeight="50">
+  <mat-grid-tile *ngFor="let movie of movies">
+    {{movie.Title}} - {{movie.imdbID}}
+    <button (click)="showExtraInfo(movie)">Details</button>
+    <button (click)="removeItemFromTheList(movie)">Remove</button>
+  </mat-grid-tile>
+</mat-grid-list>
